fixed circle overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,7 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 @media (max-width: 1280px) {
